tests/parser/define-class.1.bad.error
error: Malformed class definition
  --> test:4:15
   |
 4 |  (define-class (C))
   |                 ^ expected class type variable(s)
help: add class type variable `:a`
 4 | (define-class (C :a))
   |                ----
